--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,23 @@ html{
     scroll-behavior: smooth;
     font-family: 'Monaco', Times, serif;
     font-size: 20px;
+    text-align: center;
 }
+*:focus {
+    border: 2px solid;
+}
+li:focus {
+    border: 2px solid;
+}
+.box4 img{
+    display: none;
+}
+
 h1 {
     font-size: 35px;
+}
+#exp {
+    font-size: 10px;
 }
 .navbar {
     background-color: #c6e2e9;
@@ -30,9 +44,9 @@ h1 {
     transition: top 1s ease-out;
     z-index: 1;
   }
-  nav a:hover, nav a:focus {
+  /* nav a:hover, nav a:focus {
     text-decoration: underline;
-  }
+  } */
   .skip a{
     position: absolute;
     top: -100px;
@@ -92,16 +106,22 @@ footer {
     text-align: center;
     background-color: #c6e2e9;
 }
-nav a:hover, nav a:focus {
+/* nav a:hover, nav a:focus {
     text-decoration: underline;
-}
+} */
 
-nav a{
-    text-decoration: none;
-}
+/* nav a{
+    text-decoration: underline;
+} */
 
 /* tablet size */
 @media screen and (min-width:800px)  {
+    html {
+        text-align: left;
+    }
+    #exp {
+        font-size: 15px;
+    }
     body{
         margin: 0px; 
     }
@@ -123,7 +143,7 @@ nav a{
     
     .navbar a{
         padding: 14px 16px;
-        text-decoration: none;
+        /* text-decoration: none; */
     }
 
     .gallery {
@@ -139,11 +159,29 @@ nav a{
         flex-wrap: wrap;
     }
 
- 
+    .projs{
+        display: grid;
+        grid-template-columns: 1fr 1fr 2fr;
+        grid-template-rows: 1fr;
+        grid-column-gap: 20px;
+    }
+
 }
 
 /* desktop size */
 @media screen and (min-width:1248px)  {
+    .box4 img{
+        display: grid;
+        width: 300px;
+        height: 300px;
+        margin: 50px;
+    }
+    .projs{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr ;
+        grid-column-gap: 40px;
+    }
     .navbar {
         position: fixed;
         overflow: hidden;
