--- a/css/style.css
+++ b/css/style.css
@@ -213,5 +213,8 @@ footer {
         flex-wrap: wrap;
         justify-content: space-between;
     }
+    #exp {
+        font-size: 20px;
+    }
 
 }
